summative.moria.Moria.scala.error
Compilation error:
Moria:6: error: not found: value Direction
      if(getDirection()==Direction.EAST)
                         ^Moria:11: error: not found: value Direction
      else if(getDirection()==Direction.WEST)
                              ^