summative.moria.Moria.scala.code
while(true)
{
	avance()
  if (estSurBiscuit())
		{
  		if(getDirection()==Direction.EAST)
  			{
      		prendBiscuit()
					retourne()
    		}
      else if(getDirection()==Direction.WEST)
      	{
          recule()
          poseBiscuit()
          retourne()
        }

		}
}
